# dict-word-finder

./: .gitignore  CMakeLists.txt  LICENSE  README.md  WordBuilder.h  word_finder.cpp  word_scrape.cpp
wordlib/: CMakeLists.txt  trie.cpp  trie.h  word.cpp  word.h
